Create and use my own load balancer